CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.Jul.19 (0.9.12) [cvs]
  * Fixed Mac OS X #include typo.
    Darrell Walisser <walisser@mac.com>

  * Fixed bug where non-translated stamp description text would get drawn
    right-to-left after the kudos text (e.g., "Great!") goes away.
    Thanks to Itai <Itais@newmail.net>
  
  * French translation update.
    Jacques Chion <Jacques.Chion@wanadoo.fr>

  * Added call to close iconv when quitting.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Walloon translation.
    Pablo Saratxaga <pablo@walon.org>

  * Chinese translation update.
    Wang Jian <lark@linux.net.cn>

  * Fixed bug where translated text would revert to English in 'uppercase' mode.

  * Replaced "efont-serif" fonts with those from the 'ttf-freefont' package,
    for better support of ISO8859-13 symbols (e.g., for Lithuanian).
    Fonts copyright the Free Software Foundation.
    Thanks to Mantas Kriauciunas <monte@mail.lt> for the tip.

  * Fixed UTF-8 related bug where Lithuanian wouldn't display if using
    'TTF_RenderText...', but Spanish wouldn't display if using
    'TTF_RenderUTF8...'.  Thanks to Mantas Kriauciunas, Robert Glowczynski,
    John Popplewell and Karl Ove Hufthammer.

  * Simplified CFLAGS variable in Makefile.
    Ben Armstrong <synrg@sanctuary.nslug.ns.ca>

  * Made main event loop ignore motion events if the loop has spun too long.
    (Fixes problems where shape or stamp tools take forver to 'catch up' with
    the mouse; especially noticable on slow machines over remote X display.)

  * Added some "#error" directives to give verbose output regarding missing
    library header files.  (Typical cause of this symptom is forgetting to
    install dev. packages; e.g., installed "SDL.rpm", but not "SDL-dev.rpm")


2003.Jun.17 (0.9.11)
  * Windows bugfixes.