@@ -7,7 +7,7 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-2003.Jul.19 (0.9.12) [cvs]
+2003.Jul.26 (0.9.12) [cvs]
   * Fixed Mac OS X #include typo.
     Darrell Walisser <walisser@mac.com>
 
@@ -49,6 +49,9 @@ http://www.newbreedsoftware.com/tuxpaint/
   * Added some "#error" directives to give verbose output regarding missing
     library header files.  (Typical cause of this symptom is forgetting to
     install dev. packages; e.g., installed "SDL.rpm", but not "SDL-dev.rpm")
+
+  * Removed static "MAX_FILES" limit; now mallocs space for file info.
+    structures.  (Should fix large stack crash on OS X, which is good.)
 
 
 2003.Jun.17 (0.9.11)
